# lab06

./: CMakeLists.txt
.github/workflows/: main.yml
formatter_ex/: CMakeLists.txt  formatter_ex.h  formatter_ex_.cpp
formatter_lib/: CMakeLists.txt  formatter.h  formatter_.cpp
solver_app/: CMakeLists.txt  solve_app_.cpp
solver_lib/: CMakeLists.txt  solver.h  solver_.cpp
